fix spacing on article

--- a/css/read_blog.css
+++ b/css/read_blog.css
@@ -5,7 +5,7 @@ body {
 }
 #article_title {
 	text-align: center;
-	margin: 1.5em 0 5px 0;
+	margin: .5em 0px 1em 0;
 }
 #article_author {
 	text-align: center;
